Removed area endpoint and reintroduced dummy endpoint for future development
